Changing get all
